fix: prevent horizontal overflow on mobile

--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 html,
 body {
     min-height: 100%;
+    max-width: 100%;
+    overflow-x: hidden;
     background: #222;
 }
 
@@ -70,11 +72,13 @@ a.jump:active {
 }
 
 #title {
-    width: 330px;
+    width: min(330px, calc(100vw - 24px));
     position: fixed;
     height: 250px;
-    left: calc(50% - 165px);
-    top: calc(50% - 125px)
+    left: 50%;
+    top: calc(50% - 125px);
+    transform: translateX(-50%);
+    overflow: hidden
 }
 
 #title>.su {
@@ -174,7 +178,9 @@ a.jump:active {
     color: #e2e2e2;
     background-color: #222222d0 !important;
     backdrop-filter: blur(10px);
-    box-shadow: 0 2px 3px #00000070, 0px 3px 35px 1px #000000
+    box-shadow: 0 2px 3px #00000070, 0px 3px 35px 1px #000000;
+    max-width: calc(100vw - 24px);
+    box-sizing: border-box
 }
 
 .card p {
